# GOUDA

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  HOW_TO_UPDATE.txt  LICENSE.txt  README.md  README.rst  _version.py  consider_adding.py  environment.yml  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  package.yml
conda.recipe/: build_upload.sh  meta.yaml
docs/: HOW_TO_UPDATE.txt  Makefile  binaryconfusionmatrix.rst  conf.py  data.rst  data_methods.rst  display.rst  file_methods.rst  general.rst  goudapath.rst  image.rst  index.md  index.rst  moving_stats.rst
src/gouda/: GoudaPath.py  __init__.py  _version.py  binaryconfusionmatrix.py  color_lists.py  colors.py  confusionmatrix.py  constants.py  data_methods.py  display.py  file_methods.py  general.py  goudapath.py  image.py  moving_stats.py  plot_methods.py  plotting.py  skeleton.py  symbols.py  typing.py  video.py
src/gouda/image/: __init__.py  io.py  masks.py  metrics.py  transforms.py  viz.py
tests/: conftest.py  test_binaryconfusionmatrix.py  test_colors.py  test_confusionmatrix.py  test_datamethods.py  test_display.py  test_filemethods.py  test_general.py  test_goudapath.py  test_image.py  test_plotting.py  test_skeleton.py  test_statisticalclasses.py  travis_install.sh
tests/image/: test_io.py  test_masks.py  test_metrics.py  test_transforms.py  test_viz.py
