[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=64", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GOUDA"
dynamic = ["version"]
authors = [
    {name = "Sean Mullan"}
]
description = "Good Old Utilities for Data Analysis!"
readme = "README.md"
license = {text = "MIT"}
keywords = ["utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "matplotlib",
    "colorama",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/mullans/GOUDA"
Repository = "https://github.com/mullans/GOUDA"

[tool.setuptools]
packages = ["gouda"]

[tool.setuptools_scm]
write_to = "gouda/_version.py"
# https://setuptools-scm.readthedocs.io/en/latest/extending/#available-implementations
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov gouda --cov-report term-missing --cov-report html --cov-report xml:cov.xml --verbose"
testpaths = [
    "tests",
]
norecursedirs = [
    "dist",
    "build",
    "docs",
    ".tox",
]

[tool.ruff]
exclude = [
    "dist",
    "build",
    ".tox",
    "docs",
    "gouda/_version.py",
]
line-length = 120
indent-width = 4
target-version = "py310"
extend-exclude = ["ignore_*"]


[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "B",
    "W", "I",
    "ANN", "A", "C4", "FA", "PIE", "PT", "Q", "RET", "SIM", "I", "NPY", "N", "PERF", "D", "UP",
    "PLC", "PLE", "FURB", "RUF",
    ]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]