[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "GOUDA"
dynamic = ["version"]
authors = [{ name = "Sean Mullan" }]
description = "Good Old Utilities for Data Analysis!"
readme = "README.md"
license = { text = "MIT" }
keywords = ["utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21",
    "opencv-python",
    "scipy",
    "matplotlib",
    "colorama",
    "typing-extensions",
]
[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "build",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "mypy",
    "types-colorama",   # for mypy
    "scipy-stubs",      # for mypy
    "ruff>=0.12.2",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
    "ipykernel>=7.1.0",
]


[project.urls]
Homepage = "https://github.com/mullans/GOUDA"
Repository = "https://github.com/mullans/GOUDA"

[tool.hatch.build.targets.wheel]
packages = ["src/gouda"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
version-scheme = "only-version"
local-scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov gouda --cov-report term-missing --cov-report html --cov-report xml:cov.xml --verbose -x"
testpaths = ["tests"]
norecursedirs = ["dist", "build", "docs", ".tox/", ".tox-wsl/"]

[tool.ruff]
exclude = ["dist", "build", ".tox", ".venv", "docs", "gouda/_version.py"]
line-length = 120
indent-width = 4
target-version = "py310"
extend-exclude = ["ignore_*"]


[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "W",
    "I",
    "ANN",
    "A",
    "C4",
    "FA",
    "PIE",
    "PT",
    "Q",
    "SIM",
    "I",
    "NPY",
    "N",
    "PERF",
    "D",
    "UP",
    "PLC",
    "PLE",
    "FURB",
    "RUF",
    # "RET"  # Tried and removed
]
ignore = [
    "E501",   # Unnecessary
    "B028",   # Unnecessary
    "D203",   # Contradicts other rules
    "SIM105", # Counter-productive
    "N802",   # Counter-productive
    "UP015",  # Counter-productive
]
fixable = ["ALL"]
unfixable = []
exclude = ["binaryconfusionmatrix.py", "tests/*"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["gouda"]
extra-standard-library = ["setuptools", "pkg_resources"]
default-section = "third-party"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"symbols.py" = [
    "N816", # Allow mixed-case constants in symbols.py for readability
]

[tool.mypy] # https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/.*",
    "docs/.*",
    "dist/.*",
    "build/.*",
    "_version.py",
    ".*plotting.py$",
]

plugins = ["numpy.typing.mypy_plugin"]
